name:                IfaceError
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          christiaan.baaij@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Unbound.Generics.LocallyNameless, CLaSH.Core.TyCon, CLaSH.Core.Type
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
